2002-08-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Use librtems.a.
	* wrapup/Makefile.am: Use libsapi.a.

2002-07-31	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Use libscore.a.

2002-07-31	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/canonicalize-tools.m4: Remove LD.
	* automake/lib.am: Remove LD.
	* Makefile.am: Put preinstall-stamp into CLEANFILES.

2002-07-31	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/rtems-top.m4: Use with_project_root and MULTIBUILDTOP to 
	compose PROJECT_TOPdir (Fixes hppa1.1/genoffset problem).

2002-07-31	Joel Sherrill <joel@OARcorp.com>

	* aclocal/rtems-cpu-subdirs.m4:  Removed the or16 port
	was just a stub and only the OR32 port is getting worked on.

2002-07-31	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: LIBBLOCK_OBJS = ../libblock/$(ARCH)/libblock.a.

2002-07-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/compile.am: Use .$(OBJEXT) instead of .o.

2002-07-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Use .$(OBJEXT) instead of .o.

2002-07-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Use project_libdir instead of
	$(PROJECT_RELEASE)/lib. Eliminate LIBNAME. Pickup *.o's instead of
	*.rels for CPU_OBJS. Manually create $(project_libdir)$(MULTISUBDIR).

2002-07-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/lib.am: Use project_libdir instead of
	$(PROJECT_RELEASE)/lib.

2002-07-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/env-rtemsbsp.m4: Remove RTEMS_BSP_SPECS, PROJECT_RELEASE.
	Add project_libdir, libdir. New GCC_SPECS. Various cleanups.
	* aclocal/env-rtemscpu.m4: Remove RTEMS_BSP_SPECS, PROJECT_RELEASE.
	Add project_libdir, libdir. New GCC_SPECS. Various cleanups.
	* aclocal/rtems-top.m4: New PROJECT_ROOT handling.
	* automake/compile.am: Remove RTEMS_BSP_SPECS, LD* flags, LINK,
	references to bsp_specs. Use project_libdir instead of
	$(PROJECT_RELEASE)/lib.
