@@ -1,3 +1,8 @@
+2002-08-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* aclocal/env-rtemscpu.m4: Remove RTEMS_CONFIG_PER_BSP.
+	Use AS_IF instead of if/then/else/fi.
+
 2002-08-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* wrapup/Makefile.am: Use librtems.a.
